--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -67,7 +67,7 @@ copy:
 # formal:
 #   name: link || icon
 social:
-  Github: https://github.com/anzhiyu-c || anzhiyu-icon-github
+  Github: https://github.com/BorenHU/Jarfar/tree/master || anzhiyu-icon-github
   BiliBili: https://space.bilibili.com/367252456 || anzhiyu-icon-bilibili
 
 # 作者卡片 状态
@@ -141,7 +141,7 @@ favicon: /favicon.ico
 
 # Avatar (头像)
 avatar:
-  img: https://gitee.com/BorenHU/BlogImage/raw/master/Jayfar/20241024.jpg
+  img: https://img.wjwj.top/2025/01/21/5e54e54be63cf31850a4330a66ca9e17.jpg
   effect: false
 
 # Disable all banner image
@@ -193,7 +193,7 @@ post_meta:
 
 # 主色调相关配置
 mainTone:
-  enable: false # true or false 文章是否启用获取图片主色调
+  enable: true # true or false 文章是否启用获取图片主色调
   mode: api # cdn/api/both cdn模式为图片url+imageAve参数获取主色调，api模式为请求API获取主色调，both模式会先请求cdn参数，无法获取的情况下将请求API获取，可以在文章内配置main_color: '#3e5658'，使用十六进制颜色，则不会请求both/cdn/api获取主色调，而是直接使用配置的颜色
   # 项目地址：https://github.com/anzhiyu-c/img2color-go
   api: https://img2color-go.vercel.app/api?img= # mode为api时可填写
@@ -226,7 +226,7 @@ anchor: false
 # toc (目录)
 toc:
   post: true
-  page: false
+  page: true
   number: true
   expand: false
   style_simple: false # for post
@@ -235,7 +235,7 @@ post_copyright:
   enable: true
   decode: false
   author_href:
-  location: 长沙
+  location: 南京
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
   avatarSinks: false # hover时头像下沉
@@ -247,10 +247,10 @@ post_copyright:
 reward:
   enable: true
   QR_code:
-    - img: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-weichat.png
+    - img: https://img.wjwj.top/2025/01/21/2e5add80fb097756ec66f4fe3a8c8318.png
       link:
       text: 微信
-    - img: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/qrcode-alipay.png
+    - img: https://img.wjwj.top/2025/01/21/f1b0b2d68d1c80ef1a19ebdb218a0b1a.png
       link:
       text: 支付宝
 
@@ -320,7 +320,7 @@ comments:
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
   lazyload: false
-  count: false # Display comment count in post's top_img
+  count: true # Display comment count in post's top_img
   card_post_count: false # Display comment count in Home Page
 
 # valine
@@ -428,15 +428,15 @@ crisp:
 footer:
   owner:
     enable: true
-    since: 2020
+    since: 2025
   custom_text:
   runtime:
-    enable: true
-    launch_time: 04/01/2021 00:00:00 # 网站上线时间
+    enable: false
+    launch_time: 1/21/2025 00:00:00 # 网站上线时间
     work_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.4/img/badge/安知鱼-上班摸鱼中.svg
     work_description: 距离月入25k也就还差一个大佬带我~
     offduty_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.4/img/badge/安知鱼-下班啦.svg
-    offduty_description: 下班了就该开开心心的玩耍，嘿嘿~
+    offduty_description: 下班了就该开开心心的玩耍~
   # 徽标部分配置项 https://shields.io/
   # https://img.shields.io/badge/CDN-jsDelivr-orange?style=flat&logo=jsDelivr
   bdageitem:
@@ -448,41 +448,41 @@ footer:
       - link: https://blog.anheyu.com/
         shields: https://npm.elemecdn.com/anzhiyu-theme-static@1.0.9/img/Theme-AnZhiYu-2E67D3.svg
         message: 本站使用AnZhiYu主题
-      # - link: https://www.dogecloud.com/
-      #   shields: https://npm.elemecdn.com/anzhiyu-blog@2.2.0/img/badge/CDN-多吉云-3693F3.svg
-      #   message: 本站使用多吉云为静态资源提供CDN加速
-      # - link: https://github.com/
-      #   shields: https://npm.elemecdn.com/anzhiyu-blog@2.1.5/img/badge/Source-Github.svg
-      #   message: 本站项目由Github托管
-      # - link: http://creativecommons.org/licenses/by-nc-sa/4.0/
-      #   shields: https://npm.elemecdn.com/anzhiyu-blog@2.2.0/img/badge/Copyright-BY-NC-SA.svg
-      #   message: 本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可
+      - link: https://www.dogecloud.com/
+        shields: https://npm.elemecdn.com/anzhiyu-blog@2.2.0/img/badge/CDN-多吉云-3693F3.svg
+        message: 本站使用多吉云为静态资源提供CDN加速
+      - link: https://github.com/
+        shields: https://npm.elemecdn.com/anzhiyu-blog@2.1.5/img/badge/Source-Github.svg
+        message: 本站项目由Github托管
+      - link: http://creativecommons.org/licenses/by-nc-sa/4.0/
+        shields: https://npm.elemecdn.com/anzhiyu-blog@2.2.0/img/badge/Copyright-BY-NC-SA.svg
+        message: 本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可
   socialBar:
     enable: true
     centerImg:
     left:
       - title: email
-        link: mailto:anzhiyu-c@qq.com
+        link: mailto:1637941914@qq.com
         icon: anzhiyu-icon-envelope
       - title: 微博
-        link: https://weibo.com/u/6378063631
+        link: https://weibo.com/u/6226382705
         icon: anzhiyu-icon-weibo
-      - title: facebook
-        link: https://www.facebook.com/profile.php?id=100092208016287&sk=about
-        icon: anzhiyu-icon-facebook1
+      # - title: facebook
+      #   link: https://www.facebook.com/profile.php?id=100092208016287&sk=about
+      #   icon: anzhiyu-icon-facebook1
       - title: RSS
         link: atom.xml
         icon: anzhiyu-icon-rss
     right:
       - title: Github
-        link: https://github.com/anzhiyu-c
+        link: https://github.com/BorenHU/Jarfar/tree/master
         icon: anzhiyu-icon-github
       - title: Bilibili
-        link: https://space.bilibili.com/372204786
+        link: https://space.bilibili.com/367252456
         icon: anzhiyu-icon-bilibili
-      - title: 抖音
-        link: https://v.douyin.com/DwCpMEy/
-        icon: anzhiyu-icon-tiktok
+      # - title: 抖音
+      #   link: https://v.douyin.com/DwCpMEy/
+      #   icon: anzhiyu-icon-tiktok
       - title: CC
         link: /copyright
         icon: anzhiyu-icon-copyright-line
@@ -529,7 +529,7 @@ footer:
       enable: false
       link: /copyright
     linkList:
-      - link: https://github.com/anzhiyu-c/hexo-theme-anzhiyu
+      - link: https://github.com/BorenHU/Jarfar/tree/master
         text: 主题
       # - link: https://image.anheyu.com
       #   text: 图床
@@ -792,11 +792,11 @@ preloader:
   source: 3
   # pace theme (see https://codebyzach.github.io/pace/)
   pace_css_url:
-  avatar: https://gitee.com/BorenHU/BlogImage/raw/master/Jayfar/20241024.jpg # 自定加载动画义头像
+  avatar: https://img.wjwj.top/2025/01/21/5e54e54be63cf31850a4330a66ca9e17.jpg # 自定加载动画义头像
 
 # aside (侧边栏)
 # --------------------------------------
-
+# 个人卡片侧边栏
 aside:
   enable: true
   hide: false
@@ -818,7 +818,7 @@ aside:
   card_weixin:
     enable: true
     face: https://bu.dusays.com/2023/01/13/63c02edf44033.png
-    backFace: https://bu.dusays.com/2023/05/13/645fa415e8694.png
+    backFace: https://img.wjwj.top/2025/01/21/8a39f5bf30e5ec7ea4c04d373d59a38e.png
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -861,7 +861,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: true
-  publish_date: 4/1/2021 00:00:00
+  publish_date: 1/21/2025 00:00:00
 
 # Console - Newest Comments
 newest_comments:
@@ -1051,22 +1051,22 @@ css_prefix: true
 home_top:
   enable: true # 开关
   timemode: date #date/updated
-  title: 生活明朗
-  subTitle: 万物可爱。
-  siteText: anheyu.com
+  title: 平静的大海
+  subTitle: 培养不出优秀的水手
+  siteText: Jayfar.top
   category:
     - name: 技术
-      path: /categories/前端开发/
+      path: /categories/技术/
       shadow: var(--anzhiyu-shadow-blue)
       class: blue
       icon: anzhiyu-icon-dove
     - name: 爱好
-      path: /categories/大学生涯/
+      path: /categories/爱好/
       shadow: var(--anzhiyu-shadow-red)
       class: red
       icon: anzhiyu-icon-fire
     - name: 生活
-      path: /categories/生活日常/
+      path: /categories/生活/
       shadow: var(--anzhiyu-shadow-green)
       class: green
       icon: anzhiyu-icon-book
@@ -1231,8 +1231,8 @@ peoplecanvas:
 # 动效
 dynamicEffect:
   postTopWave: true # 文章顶部波浪效果
-  postTopRollZoomInfo: false # 文章顶部滚动时缩放
-  pageCommentsRollZoom: false # 非文章页面评论滚动时缩放显示（仅仅Twikoo生效）
+  postTopRollZoomInfo: true # 文章顶部滚动时缩放
+  pageCommentsRollZoom: true # 非文章页面评论滚动时缩放显示（仅仅Twikoo生效）
 
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
