--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
-    "highlight.js": "^11.11.1"
+    "highlight.js": "^11.11.1",
+    "valine": "^1.5.3"
   }
 }
