--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -1,19 +1,19 @@
 - class_name: 关于页
-  subtitle: 生活明朗，万物可爱✨
-  avatarImg: https://npm.elemecdn.com/anzhiyu-blog-static@1.0.0/img/avatar.webp
+  subtitle: 平静的大海培养不出优秀的水手✨
+  avatarImg: https://img.wjwj.top/2025/01/21/5e54e54be63cf31850a4330a66ca9e17.jpg
   avatarSkills:
     left:
-      - 🤖️ 数码科技爱好者
-      - 🔍 分享与热心帮助
-      - 🏠 智能家居小能手
-      - 🔨 设计开发一条龙
+      - 🤖️ 健身搏击爱好者
+      - 🔍 疑难杂症终结者
+      - 🏠 玄学流电脑专家
+      - 🔨 逆风翻盘的阻碍
     right:
-      - 专修交互与设计 🤝
+      - 脑路新奇的鬼才 🤝
       - 脚踏实地行动派 🏃
-      - 团队小组发动机 🧱
-      - 壮汉人狠话不多 💢
-  name: 陈志伟
-  description: 是一名 前端工程师、学生、独立开发者、博主
+      - 面无表情专业户 🧱
+      - 世间纷扰解构者 💢
+  name: Jayfar
+  description: 是一名 世界探索者
   aboutsiteTips:
     tips: 追求
     title1: 源于
@@ -31,122 +31,123 @@
     tips: 生涯
     title: 无限进步
     list:
-      - desc: EDU,软件工程专业
+      - desc: EDU,计算机科学与技术
         color: "#357ef5"
-      - desc: EDU,软件工程专业
+      - desc: WORK,Python开发
         color: "#357ef5"
-      - desc: EDU,软件工程专业
-        color: "#357ef5"
+      # - desc: EDU,计算机科学与技术
+      #   color: "#357ef5"
     img: https://bu.dusays.com/2023/04/21/644287166329b.png
   statistic:
     link: /archives
     text: 文章隧道
     cover: https://bu.dusays.com/2023/05/01/644f4b037b930.jpg
+
   map:
     title: 我现在住在
-    StrengthenTitle: 中国，长沙市
-    background: https://bu.dusays.com/2023/07/05/64a4c61cb20ef.jpg
-    backgroundDark: https://bu.dusays.com/2023/07/05/64a4c63495ac5.jpg
+    StrengthenTitle: 中国，南京市
+    background: https://img.wjwj.top/2025/01/22/6e13f079aa3c48fd5ecb9ac75842fed4.png
+    backgroundDark: https://img.wjwj.top/2025/01/22/6e13f079aa3c48fd5ecb9ac75842fed4.png
   selfInfo:
     selfInfoTips1: 生于
-    selfInfoContentYear: 2002
-    selfInfoTips2: 湖南信息学院
-    selfInfoContent2: 软件工程
+    selfInfoContentYear: 1999
+    selfInfoTips2: 专业
+    selfInfoContent2: 计算机科学与技术
     selfInfoTips3: 现在职业
-    selfInfoContent3: 大三学生👨‍🎓
+    selfInfoContent3: Python
   personalities:
-    author_name: 执政官
-    personality_type: ESFJ-A
-    photo_url: https://bu.dusays.com/2023/07/05/64a4c63495ac5.jpg
-    personality_img: https://npm.elemecdn.com/anzhiyu-blog@2.0.8/img/svg/ESFJ-A.svg
-    name_url: https://www.16personalities.com/ch/esfj-%E4%BA%BA%E6%A0%BC
+    author_name: 建筑师
+    personality_type: INTJ-A
+    photo_url: https://img.wjwj.top/2025/01/24/ad5d6226ca524e255e83eb7192a8231d.png
+    personality_img: https://img.wjwj.top/2025/01/22/9c1d1d324e8635198188059ae167d80b.png
+    name_url: https://www.16personalities.com/ch/intj-%E4%BA%BA%E6%A0%BC
   maxim:
     maxim_tips: 座右铭
-    maxim_top: 生活明朗，
-    maxim_bottom: 万物可爱。
+    maxim_top: 平静的大海
+    maxim_bottom: 培养不出优秀的水手
   buff:
     buff_tips: 特长
-    buff_top: 脑回路新奇的 酸菜鱼
-    buff_bottom: 二次元指数 MAX
+    buff_top: 脑回路新奇的 逻辑鬼才
+    buff_bottom: 现实指数 MAX
   game:
     game_tips: 爱好游戏
-    game_title: 原神
-    game_uid: "UID: 125766904"
-    game_bg: https://bu.dusays.com/2023/04/22/64433bf26e25d.webp
+    game_title: 炉石传说
+    game_uid: ""
+    game_bg: https://img.wjwj.top/2025/01/24/c21c026156e4ec6cf46479718ef4d9f2.jpg
   comic:
-    comic_tips: 爱好番剧
-    comic_title: 追番
+    comic_tips: 爱好
+    comic_title: 成长
     comic_list:
-      - name: 约定的梦幻岛
-        href: https://www.bilibili.com/bangumi/media/md5267750/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
-        cover: https://bu.dusays.com/2023/05/27/647166c44b414.webp
-      - name: 咒术回战
-        href: https://www.bilibili.com/bangumi/media/md28229899/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
-        cover: https://bu.dusays.com/2023/05/24/646db4398832e.webp
-      - name: 紫罗兰永恒花园
-        href: https://www.bilibili.com/bangumi/media/md8892/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
-        cover: https://bu.dusays.com/2023/05/24/646db43983d99.webp
-      - name: 鬼灭之刃
-        href: https://www.bilibili.com/bangumi/media/md22718131/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
-        cover: https://bu.dusays.com/2023/05/24/646db439856a0.webp
-      - name: JOJO的奇妙冒险 黄金之风
-        href: https://www.bilibili.com/bangumi/media/md135652/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
-        cover: https://bu.dusays.com/2023/05/30/64760e38d651a.webp
+      - name: 游泳
+        href: # https://www.bilibili.com/bangumi/media/md5267750/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
+        cover: https://img.wjwj.top/2025/01/25/405f141c240050560df4bc2f6f0b6877.jpg
+      - name: 搏击
+        href: #https://www.bilibili.com/bangumi/media/md28229899/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
+        cover: https://img.wjwj.top/2025/01/24/7d5b9e94fa236a505d3ccd6ee228a88c.jpg
+      - name: 技术
+        href: #https://www.bilibili.com/bangumi/media/md8892/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
+        cover: https://img.wjwj.top/2025/01/25/7e239a5ebc6b5c392bbd19779075056a.webp
+      - name: 理财
+        href: #https://www.bilibili.com/bangumi/media/md22718131/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
+        cover: https://img.wjwj.top/2025/01/25/ffa856f25b419335eb811502326228e0.png
+      - name: 摩托
+        href: #https://www.bilibili.com/bangumi/media/md135652/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1
+        cover: https://img.wjwj.top/2025/01/25/648750a2279ca0171a903e1dcbfb51b7.jpg
   like:
     like_tips: 关注偏好
-    like_title: 数码科技
-    like_bg: https://bu.dusays.com/2022/12/06/638f5f05ce1f7.jpg
-    like_bottom: 手机、电脑软硬件
+    like_title: 自我提升
+    like_bg: https://img.wjwj.top/2025/01/24/ed58743f3478c04e7fcda6681b3d50b8.jpg
+    like_bottom: 
   music:
     music_tips: 音乐偏好
-    music_title: 许嵩、民谣、华语流行
-    music_bg: https://p2.music.126.net/Mrg1i7DwcwjWBvQPIMt_Mg==/79164837213438.jpg
+    music_title: Phonk
+    music_bg: https://img.wjwj.top/2025/01/24/6347ec454fa4ef6c1322a15e58e0a88f.jpg
     music_link: /music
   reward_list:
-    - name: 海阔蓝
-      amount: 8.8
-      datatime: 2023-03-28
-    - name: LK66
-      amount: 66.6
-      datatime: 2023-03-24
-    - name: 张时貳
-      amount: 6.6
-      datatime: 2023-01-22
-    - name: ZeroAf
-      amount: 9.9
-      datatime: 2022-12-14
-    - name: LuckyWangXi
-      amount: 6.6
-      datatime: 2022-12-14
-    - name: 刀中日月长
-      amount: 10
-      datatime: 2022-11-16
-    - name: 鹿啵包
-      amount: 10
-      datatime: 2022-11-08
-    - name: 疾速k
-      amount: 50
-      datatime: 2022-09-20
-    - name: 伴舟先生大霖子
-      amount: 4.03
-      datatime: 2022-10-27
-      suffix: 贝壳
-    - name: Magica_0x0
-      amount: 3.36
-      datatime: 2022-10-07
-      suffix: 贝壳
-    - name: 名字就是要短像这样
-      amount: 3.36
-      datatime: 2022-08-25
-      suffix: 贝壳
-    - name: Leviathan520
-      amount: 1.34
-      datatime: 2022-08-23
-      suffix: 贝壳
-    - name: 托马斯
-      amount: 10
-      datatime: 2022-08-19
-    - name: 哇是猫猫欸
-      amount: 1.34
-      datatime: 2022-08-19
-      suffix: 贝壳
+    # - name: 海阔蓝
+    #   amount: 8.8
+    #   datatime: 2023-03-28
+    # - name: LK66
+    #   amount: 66.6
+    #   datatime: 2023-03-24
+    # - name: 张时貳
+    #   amount: 6.6
+    #   datatime: 2023-01-22
+    # - name: ZeroAf
+    #   amount: 9.9
+    #   datatime: 2022-12-14
+    # - name: LuckyWangXi
+    #   amount: 6.6
+    #   datatime: 2022-12-14
+    # - name: 刀中日月长
+    #   amount: 10
+    #   datatime: 2022-11-16
+    # - name: 鹿啵包
+    #   amount: 10
+    #   datatime: 2022-11-08
+    # - name: 疾速k
+    #   amount: 50
+    #   datatime: 2022-09-20
+    # - name: 伴舟先生大霖子
+    #   amount: 4.03
+    #   datatime: 2022-10-27
+    #   suffix: 贝壳
+    # - name: Magica_0x0
+    #   amount: 3.36
+    #   datatime: 2022-10-07
+    #   suffix: 贝壳
+    # - name: 名字就是要短像这样
+    #   amount: 3.36
+    #   datatime: 2022-08-25
+    #   suffix: 贝壳
+    # - name: Leviathan520
+    #   amount: 1.34
+    #   datatime: 2022-08-23
+    #   suffix: 贝壳
+    # - name: 托马斯
+    #   amount: 10
+    #   datatime: 2022-08-19
+    # - name: 哇是猫猫欸
+    #   amount: 1.34
+    #   datatime: 2022-08-19
+    #   suffix: 贝壳
