--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -453,6 +453,8 @@ footer:
       - link: http://creativecommons.org/licenses/by-nc-sa/4.0/
         shields: https://npm.elemecdn.com/anzhiyu-blog@2.2.0/img/badge/Copyright-BY-NC-SA.svg
         message: 本站采用知识共享署名-非商业性使用-相同方式共享4.0国际许可协议进行许可
+      # - link: http://beian.miit.gov.cn #徽标指向网站链接
+      #   shields: https://img.shields.io/badge/CDN-jsDelivr-orange?style=flat&logo=jsDelivr #徽标API
   socialBar:
     enable: true
     centerImg:
@@ -529,8 +531,8 @@ footer:
         text: 主题
       # - link: https://image.anheyu.com
       #   text: 图床
-      # - link: https://beian.miit.gov.cn/
-      #   text: 湘ICP备-xxxxxxx号
+      - link: https://beian.miit.gov.cn/
+        text: 皖ICP备-2024050192号
     subTitle:
       enable: false
       # Typewriter Effect (打字效果)
