--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 title: Jayfar
 subtitle: 
 description: 
-keywords:
+keywords: "Hexo, Blog, Web Development, 技术, 生活"
+
 author: Jayfar
 language: zh-CN
 timezone: ''
@@ -45,20 +46,20 @@ relative_link: false
 future: true
 syntax_highlighter: highlight.js
 highlight:
-  line_number: true
+  line_number: true 
   auto_detect: true
   tab_replace: ''
   wrap: true
   hljs: true
 prismjs:
-  preprocess: true
-  line_number: true
+  preprocess: true 
+  line_number: true 
   tab_replace: ''
 prism_plugin:
   mode: 'preprocess' # 或 'render', 默认为 'preprocess'
-  theme: 'default'  # 选择 Prism 的代码高亮主题，如 'default', 'dark', 'okaidia' 等
+  theme: 'okaidia'  # 选择 Prism 的代码高亮主题，如 'default', 'dark', 'okaidia' 等
   line_number: true  # 显示行号
-  copy_btn: false    # 是否显示“复制代码”按钮
+  copy_btn: true    # 是否显示“复制代码”按钮
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -66,7 +67,7 @@ prism_plugin:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 12
   order_by: -date
 
 # Category & Tag
