--- a/source/_data/essay.yml
+++ b/source/_data/essay.yml
@@ -7,7 +7,5 @@
   home_essay: true
   top_background: https://img.wjwj.top/2025/01/22/a430243682f2dd99d7f4473cbb69b976.png
   essay_list:
-    - content: 安知鱼主题指南
-      date: 2023/09/09
-      video:
-        - https://player.bilibili.com/player.html?aid=226886152&bvid=BV1Ch41137tR&cid=1081639816&p=1&autoplay=0
+    - content: justnav.us.kg- Personal navigation stack online
+      date: 2025/02/12
